feat：加入新功能

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://bigblacksheep527.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -105,7 +105,11 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: 'git'
-  repo: git@github.com:BigBlackSheep527/BigBlackSheep527.github.io.git
-  branch: main
-  token: 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
+  - type: 'git'
+    repo: git@github.com:BigBlackSheep527/BigBlackSheep527.github.io.git
+    branch: main
+    token: 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
+  - type: 'git'
+    repo: git@gitee.com:daheiyang/big_black.gitub.io.git
+    branch: main
+    token: cb748a7f015ee58ebf5211c30c302e4c
