--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -40,7 +40,7 @@ social:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.png
+favicon: /img/dog.png
 
 # Avatar (頭像)
 avatar:
@@ -913,7 +913,7 @@ inject:
   head:
     # - <link rel="stylesheet" href="/xxx.css">
   bottom:
-    - <div class="aplayer no-destroy" data-id="2238403960" data-server="netease" data-volume="0.5" data-listfolded="true"  data-order="random" data-type="playlist" data-fixed="true" data-mini="true" data-autoplay="true" data-preload="auto"> </div>
+    - <div class="aplayer no-destroy" data-id="2238403960" data-server="netease" data-volume="0.5" data-listfolded="true"  data-order="random" data-type="playlist" data-fixed="true" data-mini="true" data-autoplay="true" > </div>
 
 # CDN
 # Don't modify the following settings unless you know how they work
