--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -913,7 +913,7 @@ inject:
   head:
     # - <link rel="stylesheet" href="/xxx.css">
   bottom:
-    - <div class="aplayer no-destroy" data-id="2238403960" data-server="netease" data-volume="0.5" data-listfolded="true"  data-order="random" data-type="playlist" data-fixed="true" data-mini="true" data-autoplay="true" > </div>
+    - <div class="aplayer no-destroy" data-id="2238403960" data-server="netease" data-volume="0.5" data-listfolded="true"  data-order="random" data-type="playlist" data-fixed="true" data-mini="true" data-autoplay="false" > </div>
 
 # CDN
 # Don't modify the following settings unless you know how they work
