--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -456,7 +456,7 @@ valine:
 # waline - A simple comment system with backend support fork from Valine
 # https://waline.js.org/
 waline:
-  serverURL: https://www.apichat.buzz  # 后面千万不要加“/"
+  serverURL: https://apichat.uk  # 后面千万不要加“/"
   bg:  waline background
   pageview: false
   option:
